// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelInputOnError Default LabelInput on error without message 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 0.813rem;
  width: 16.625rem;
}

.emotion-1 {
  margin-bottom: 0.25rem;
  font-weight: 600;
  color: #F55858;
}

.emotion-2 {
  border-radius: 0.25rem;
  border: 0.063rem solid #F55858;
  color: #676478;
  cursor: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0rem 0.75rem;
}

.emotion-2:hover:not([disabled]) {
  border: #EBEEF0;
  box-shadow: 0rem 0rem 0.313rem #F1F1F1;
  color: #A4AAC0;
}

.emotion-2:focus-within {
  border: 0.063rem solid #00DBC7;
  box-shadow: 0rem 0rem 0.875rem #F1F1F1;
  color: #676478;
}

.emotion-3 {
  outline: none;
  border: 0;
  background-color: inherit;
  color: inherit;
  width: 100%;
  font-size: 0.813rem;
  min-height: 2rem;
  cursor: inherit;
}

.emotion-4 {
  position: relative;
  left: unset;
}

<div>
  <div
    class="emotion-0"
    data-testid="LabelInput"
  >
    <label
      class="emotion-1"
      data-testid="label"
    >
      testLabel
    </label>
    <div
      class="emotion-2"
      data-testid="inputWrapper"
    >
      <input
        class="emotion-3"
        data-testid="input"
        type="text"
        value="testValue"
      />
      <div
        class="emotion-4"
        data-testid="errorIcon"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 21 20"
          width="21"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="10.207"
            cy="10"
            fill="#F55858"
            opacity="0.2"
            r="10"
          />
          <path
            d="M9.89165 11.48L9.39965 7.98802V5.62402H11.0317V7.98802L10.5637 11.48H9.89165ZM10.2157 14.144C9.87165 14.144 9.62365 14.064 9.47165 13.904C9.31965 13.744 9.24365 13.54 9.24365 13.292V13.052C9.24365 12.804 9.31965 12.6 9.47165 12.44C9.62365 12.28 9.87165 12.2 10.2157 12.2C10.5517 12.2 10.7957 12.28 10.9477 12.44C11.0997 12.6 11.1757 12.804 11.1757 13.052V13.292C11.1757 13.54 11.0997 13.744 10.9477 13.904C10.7957 14.064 10.5517 14.144 10.2157 14.144Z"
            fill="#F55858"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`LabelInputOnError LabelInput throw error with message 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 0.813rem;
  width: 16.625rem;
}

.emotion-1 {
  margin-bottom: 0.25rem;
  font-weight: 600;
  color: #F55858;
}

.emotion-2 {
  border-radius: 0.25rem;
  border: 0.063rem solid #F55858;
  color: #676478;
  cursor: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0rem 0.75rem;
}

.emotion-2:hover:not([disabled]) {
  border: #EBEEF0;
  box-shadow: 0rem 0rem 0.313rem #F1F1F1;
  color: #A4AAC0;
}

.emotion-2:focus-within {
  border: 0.063rem solid #00DBC7;
  box-shadow: 0rem 0rem 0.875rem #F1F1F1;
  color: #676478;
}

.emotion-3 {
  outline: none;
  border: 0;
  background-color: inherit;
  color: inherit;
  width: 100%;
  font-size: 0.813rem;
  min-height: 2rem;
  cursor: inherit;
}

.emotion-4 {
  position: relative;
  left: unset;
}

.emotion-5 {
  margin-bottom: 0.25rem;
  font-weight: 600;
  color: #F55858;
  margin: 0.25rem 0rem 0rem 0rem;
  font-size: 0.625rem;
}

<div>
  <div
    class="emotion-0"
    data-testid="LabelInput"
  >
    <label
      class="emotion-1"
      data-testid="label"
    >
      testLabel
    </label>
    <div
      class="emotion-2"
      data-testid="inputWrapper"
    >
      <input
        class="emotion-3"
        data-testid="input"
        type="text"
        value="testValue"
      />
      <div
        class="emotion-4"
        data-testid="errorIcon"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 21 20"
          width="21"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="10.207"
            cy="10"
            fill="#F55858"
            opacity="0.2"
            r="10"
          />
          <path
            d="M9.89165 11.48L9.39965 7.98802V5.62402H11.0317V7.98802L10.5637 11.48H9.89165ZM10.2157 14.144C9.87165 14.144 9.62365 14.064 9.47165 13.904C9.31965 13.744 9.24365 13.54 9.24365 13.292V13.052C9.24365 12.804 9.31965 12.6 9.47165 12.44C9.62365 12.28 9.87165 12.2 10.2157 12.2C10.5517 12.2 10.7957 12.28 10.9477 12.44C11.0997 12.6 11.1757 12.804 11.1757 13.052V13.292C11.1757 13.54 11.0997 13.744 10.9477 13.904C10.7957 14.064 10.5517 14.144 10.2157 14.144Z"
            fill="#F55858"
          />
        </svg>
      </div>
    </div>
    <label
      class="emotion-5"
      data-testid="errorMessage"
    >
      errorMessage
    </label>
  </div>
</div>
`;
